--- a/.github/workflows/deploy_surge.yml
+++ b/.github/workflows/deploy_surge.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ bitf12m033-class1.surge.sh --token ${{secret.SURGE_TOKEN}}
+      run: surge ./ bitf12m033-class1.surge.sh --token ${{secrets.SURGE_TOKEN}}
       
     
      
